k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cinema-app
  labels:
    app.kubernetes.io/name: cinema-plus
    app.kubernetes.io/managed-by: kubectl
    environment: production
