k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cinema-frontend
  namespace: cinema-app
  labels:
    app.kubernetes.io/name: cinema-plus
    app.kubernetes.io/component: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/component: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cinema-plus
        app.kubernetes.io/component: frontend
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/component: frontend
                topologyKey: kubernetes.io/hostname
      securityContext:
        runAsNonRoot: false
        fsGroup: 101
      containers:
        - name: frontend
          image: m1ki9/cinema-frontend:sha-4bc7dfa
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/cinema.conf
              subPath: cinema.conf
              readOnly: true
          resources:
            requests:
              memory: 32Mi
              cpu: 50m
            limits:
              memory: 64Mi
              cpu: 100m
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
      volumes:
        - name: nginx-config
          configMap:
            name: cinema-frontend-config
