k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cinema-backend-svc
  namespace: cinema-app
  labels:
    app.kubernetes.io/name: cinema-plus
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP   
  selector:
    app.kubernetes.io/component: backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
