k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: cinema-frontend-svc
  namespace: cinema-app
  labels:
    app.kubernetes.io/name: cinema-plus
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP   
  selector:
    app.kubernetes.io/component: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
